--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-desktop",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "app.js",
   "license": "MIT",
   "devDependencies": {
     "electron": "^9.0.0"
